--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+table{
+	background-color:yellow;
+	border:1px solid black;
+}
+th, td{
+	border:1px solid black;
+}
+
+p{
+	padding-left:40px
+}
