--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
-/*  your css code here. If applicable */
-table{
-	background-color:yellow;
-	border:1px solid black;
-}
-th, td{
-	border:1px solid black;
+table {
+	background-color: yellow;
+	border: 1px solid black;
+	border-collapse: collapse;
 }
 
-p{
-	padding-left:40px
+caption {
+	font-weight: bold;
+	margin-bottom: 8px;
 }
+
+th, td {
+	border: 1px solid black;
+	padding: 8px;
+	text-align: left;
+}
+
